<resources>
    <string name="app_name">trackle</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Strings required for navigation drawer panel page  -->
    <string name="park">Park</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!-- Strings required for about page  -->
    <string name="arun">Arun Vadivel</string>
    <string name="kiran">Kiran Mohan</string>
    <string name="neha">Neha Mahajan</string>
    <string name="developed_by">Developed By:</string>
    <string name="tag_line">Always remember where you parked!</string>
    <string name="version">Version 1.1</string>
    <string name="wpi_presents">WPI Presents</string>

    <!-- Strings required for settings page  -->
    <string name="parking_mode">Parking Mode</string>
    <string name="parking_alerts">Timed Parking Alerts</string>
    <string name="location_history">Location History</string>
    <string name="auto">Auto</string>
    <string name="manual">Manual</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>

    <!-- List item details dialog  -->
    <string name="note">Note:</string>
    <string name="paidparking">Paid Parking:</string>
    <string name="parkingduration">Parking Duration (min):</string>
    <string name="parkingcost">Parking Cost (dollars):</string>
</resources>
