<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wpi_presents"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="50dp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textColor="#000000" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/version"
        android:textSize="20sp"
        android:textColor="#000000" />

    <ImageView
        android:layout_marginTop="10dp"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/trackle" />

    <ImageButton
        android:layout_marginTop="10dp"
        android:id="@+id/sendMail"
        android:src="@drawable/ic_gmail"
        android:layout_width="50dp"
        android:layout_height="32dp"
        android:scaleType="fitXY"
        android:background="@null"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tag_line"
        android:textSize="22sp"
        android:textColor="#000000" />

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/developed_by"
        android:textSize="18sp"
        android:textColor="#000000" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/arun"
        android:textSize="15sp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/kiran"
        android:textSize="15sp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/neha"
        android:textSize="15sp"
        android:textColor="#000000" />

</LinearLayout>