<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parking_mode"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"/>

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/parkingMode"
                android:layout_alignParentRight="true"
                android:textOn="@string/auto"
                android:textOff="@string/manual"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parking_alerts"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"/>

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/parkingAlerts"
                android:layout_alignParentRight="true"
                android:textOn="@string/on"
                android:textOff="@string/off"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_history"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"/>

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/parkingHistory"
                android:layout_alignParentRight="true"
                android:textOn="@string/enabled"
                android:textOff="@string/disabled"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>