<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_margin="10dp"
            android:layout_height="match_parent"
            android:id="@+id/locationAddress"
            android:textSize="17sp"
            android:maxWidth="150dp"
            android:maxLines="4"
            android:textColor="#000000"/>

        <ImageButton
            android:id="@+id/showLocation"
            android:src="@drawable/ic_location"
            android:layout_marginLeft="0sp"
            android:layout_width="48dp"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:layout_marginRight="5dp"
            android:scaleType="fitXY"
            android:background="@null"
            android:layout_alignParentEnd="true" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/parkingDate"
                android:textSize="17sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/parkingTime"
                android:textSize="17sp"
                android:textColor="#000000"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/deleteRecord"
            android:src="@drawable/ic_trash"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitXY"
            android:background="@null"
            android:layout_gravity="center"
            android:layout_marginRight="5sp"
            android:layout_alignParentEnd="true"/>
    </LinearLayout>>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/details">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="40dp">

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/historyimageView1"
                    android:tag="historyimageView1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="centerInside"
                    android:background="@android:color/darker_gray"
                    android:layout_alignParentLeft="true"/>

                <ImageView
                    android:id="@+id/historyimageView2"
                    android:tag="historyimageView2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="centerInside"
                    android:layout_centerInParent="true"
                    android:background="@android:color/darker_gray"/>

                <ImageView
                    android:id="@+id/historyimageView3"
                    android:tag="historyimageView3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="centerInside"
                    android:layout_alignParentRight="true"
                    android:background="@android:color/darker_gray"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paidparking"
                android:paddingRight="10dp"
                android:textSize="17sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:id="@+id/paidParkingValue" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:paddingRight="10dp"
                android:text="@string/parkingcost"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:id="@+id/parkingCostValue" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:paddingRight="10dp"
                android:text="@string/parkingduration"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:id="@+id/parkingDurationValue" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:paddingRight="10dp"
                android:text="@string/note"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:id="@+id/noteValue" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>