<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:background="@drawable/custom_border_park_dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/imageContainer">

            <ImageView
                android:id="@+id/imageView0"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerInside"
                android:background="@android:color/darker_gray"
                android:layout_alignParentLeft="true"/>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerInside"
                android:layout_centerInParent="true"
                android:background="@android:color/darker_gray"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerInside"
                android:layout_alignParentRight="true"
                android:background="@android:color/darker_gray"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent">
            <ImageButton android:id="@+id/cameraButton"
                android:layout_width="60dp"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera"
                />
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paidparking"
            android:paddingRight="10dp"
            android:textSize="15sp"/>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:textOff=""
            android:textOn=""
            android:id="@+id/paidParkingSwitch"
            android:scrollbarStyle="insideOverlay"
            android:scrollbarSize="50dp"
            android:showText="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/parkingcost"
            android:paddingRight="10dp"
            android:textSize="15sp"/>

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/parkingCostSeekBar"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="-10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:textSize="15sp"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="-40dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.25"
                android:paddingRight="10dp"
                android:scaleType="centerInside"
                android:layout_alignParentLeft="true"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/parkingCostInput"
                android:scaleType="centerInside"
                android:layout_centerInParent="true"
                android:textSize="15sp"
                android:textColor="#1357cc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="30"
                android:paddingRight="10dp"
                android:scaleType="centerInside"
                android:layout_alignParentRight="true"
                android:textSize="15sp"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/parkingduration"
            android:paddingRight="10dp"
            android:textSize="15sp"/>

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/parkingDurationSeekBar"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="-10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text=""
            android:paddingRight="10dp"
            android:textSize="15sp"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="-30dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10"
                android:paddingRight="10dp"
                android:scaleType="centerInside"
                android:layout_alignParentLeft="true"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/parkingDurationInput"
                android:scaleType="centerInside"
                android:layout_centerInParent="true"
                android:textSize="15sp"
                android:textColor="#1357cc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="180"
                android:paddingRight="10dp"
                android:scaleType="centerInside"
                android:layout_alignParentRight="true"
                android:textSize="15sp"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:paddingRight="10dp"
            android:textSize="15sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/noteInputText"
            android:maxLength="50"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>